syntax = "proto3";
option csharp_namespace = "GrpcShared";

package helloworld;

service GameManager {
  rpc GetTrainingMenu (CoachRequest) returns (CoachReply) {}
}

message CoachRequest {
  string context = 1;
}

message CoachReply {
  repeated uint32 types0 = 1;
  repeated uint32 types1 = 2;
  repeated uint32 rewsna = 3;
}
